# othello-rl

./: .gitignore  ENGINE_ANALYSIS.md  FINAL_CHECKPOINT_RESULTS.md  README.md  pyproject.toml
.kiro/specs/othello-rl-environment/: design.md  requirements.md  tasks.md
aip_rl/othello/: __init__.py  engines.py  env.py  models.py  play_agent_vs_agent.py  play_agent_vs_agent_elo.py  play_agent_vs_agent_eval.py  play_common.py  play_human_vs_agent.py  play_human_vs_agent_gui.py  train.py
aip_rl/othello/tests/: __init__.py  test_env.py  test_properties.py  test_training_integration.py
notebooks/: 01_basic_environment_usage.ipynb  02_training_with_rllib.ipynb  03_evaluating_trained_agents.ipynb
openspec/changes/integrate-external-engines/: proposal.md  (+1 more)
rust/: test_board.rs
rust/engines/: Cargo.toml
rust/othello/: BUILD.md  Cargo.toml  README.md  TEST_COVERAGE.md
rust/othello/examples/: manual_test.rs
rust/othello/src/: bindings.rs  lib.rs
rust/othello/tests/: test_bindings.py  test_bindings_properties.py
scripts/: ACTION_MASKING_TEST_RESULTS.md  GUI_FEATURES.md  README_HUMAN_INTERACTION.md  README_VECTORIZED_TESTS.md  gpu_train.sh  play_agent_vs_agent.py  play_agent_vs_agent_elo.py  play_agent_vs_agent_eval.py  play_human_vs_agent.py  play_human_vs_agent_gui.py  test_action_masking.py  test_checkpoint_restore.py  test_ppo_training.py  test_rllib_vectorized.py  test_training_50_iterations.py  test_vectorized_envs.py  train_othello.py  watch_agents_play.py
zoo/: README.md  elo.json
zoo/checkpoint_20260131/: algorithm_state.pkl  rllib_checkpoint.json
(+10 files in other folders)
