[project]
name = "aip-rl"
version = "0.1.0"
description = ""
authors = [
    {name = "bochen0909@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ray[rllib] (>=2.53.0,<3.0.0)",
    "gymnasium==1.1.1",
    "torch>=2.0.0",
]

[project.optional-dependencies]
gui = ["pygame>=2.5.0"]


[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
# Path to the Rust project
manifest-path = "rust/othello/Cargo.toml"
# Python source directory
python-source = "."
# Module name (must match the #[pymodule] name in bindings.rs)
module-name = "othello_rust"
